@@ -41,14 +41,12 @@
   (define-main-key ("Left" :mod-1) 'select-previous-brother)
   (define-main-key ("Down" :mod-1) 'select-previous-level)
   (define-main-key ("Up" :mod-1) 'select-next-level)
-  ;; Work in progress
-  ;;  (define-circulate-modifier "Alt_L")
-  ;;  (define-circulate-reverse-modifier '("Shift_L" "Shift_R"))
   (define-main-key ("Tab" :mod-1) 'select-next-child)
   (define-main-key ("Tab" :mod-1 :shift) 'select-previous-child)
   (define-main-key ("Tab" :shift) 'switch-to-last-child)
   (define-main-key ("Return" :mod-1) 'enter-frame)
   (define-main-key ("Return" :mod-1 :shift) 'leave-frame)
+  (define-main-key ("Return" :mod-5) 'frame-toggle-maximize)
   (define-main-key ("Page_Up" :mod-1) 'frame-lower-child)
   (define-main-key ("Page_Down" :mod-1) 'frame-raise-child)
   (define-main-key ("Home" :mod-1) 'switch-to-root-frame)
